<resources>
    <string name="app_name">Sealanes Shipping</string>
    <string name="slide_one_top_text">Fast Shipping</string>
    <string name="slide_two_top_text">Worlds Largest Network</string>
    <string name="slide_three_top_text">Price you can afford</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_one_down_text">We provide the fastest waterway shipping!</string>
    <string name="slide_two_down_text">We deliver to over 150+ countries around the world!</string>
    <string name="slide_three_down_text">We provide the cheapest per cubic weight price.</string>
    <string name="source_destination">Enter Source Destination</string>
    <string name="step_1_2">Step 1/2</string>
    <string name="placeholder_enter_source_location">Source Location</string>
    <string name="final_destination">Enter Final Destination</string>
    <string name="placeholder_enter_final_location">Final Location</string>
    <string name="next">Next</string>
    <string name="step_2_2">Step 2/2</string>
    <string name="enter_weight">Enter Weight (in Cubic Meters)</string>
    <string name="placeholder_enteR_weight">Enter Weight</string>
    <string name="submit">Submit</string>
    <string name="placeholder">dummy text</string>
    <string name="oder_id">Order ID:</string>
    <string name="order_succesS_placed">Your order is successfully placed!</string>
    <string name="greet_user">Hey Varun!</string>
    <string name="image_desc">Order Success</string>
    <string name="login">Login</string>
    <string name="login_subtext">Login to book an order</string>
    <string name="email">Email</string>
    <string name="enter_password">Password</string>
    <string name="string_register">Register</string>
    <string name="register_desc">Register to get started</string>
    <string name="string_name">Name</string>
    <string name="string_phonenumber">Phone Number</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_enter_number">Enter Phone Number</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="string_log_out">Log out</string>
    <string name="string_share">Share</string>
    <string name="string_about_us">About us</string>
    <string name="string_contact_us">Contact us</string>
    <string name="string_forgot_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="string_leave_a_msg">Leave a message down below and we will make sure to contact you.</string>
    <string name="string_subject">Subject</string>
    <string name="hint_subject">Enter Subject</string>
    <string name="hint_message" > Message</string>
    <string name="share_success_text">Hey  %1$s !</string>
    <string name="string_home">Home</string>
    <string name="hint_enter_date" />
    <string name="string_enter_sail_date">Enter Sailing Date</string>

</resources>